--- a/2023184_student_cct_ie.ipynb
+++ b/2023184_student_cct_ie.ipynb
@@ -6155,6 +6155,106 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Results Presentation and Dashboard Evaluation (20/20)\n",
+        "\n",
+        "In this project, I created an interactive Stock Forecast Dashboard using Dash and Plotly, combining forecasted prices, historical trends, and sentiment analysis of major tech companies (AAPL, TSLA, AMZN, GOOGL). The dashboard is organized into four main views:\n",
+        "📊 1. Use of Figures and Tables\n",
+        "\n",
+        "    Forecast Visualization:\n",
+        "    The bar chart clearly presents the 1-day, 3-day, and 7-day forecasts for each company. This grouped visualization allows users to compare short-term trends across stocks at a glance.\n",
+        "\n",
+        "    Historical Prices:\n",
+        "    The line graph plotting historical stock prices over 100 days highlights patterns, volatility, and relative performance.\n",
+        "\n",
+        "    Sentiment Analysis:\n",
+        "    Another line graph tracks sentiment_agg scores by ticker, showing how social media sentiment fluctuates over time and possibly correlates with stock performance.\n",
+        "\n",
+        "    Forecast Data Table:\n",
+        "    Forecast values are also represented in a structured DataFrame, used behind the scenes for plotting but also suitable for table output if needed.\n",
+        "\n",
+        "Each figure includes appropriate titles, color distinctions, and legends for clarity. These choices enhance the reader’s ability to digest complex information efficiently."
+      ],
+      "metadata": {
+        "id": "kxi8SzD9e2er"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tufts Principles and Dashboard Design\n",
+        "\n",
+        "Edward Tufte’s principles focus on simplicity, accuracy, and clear communication. This dashboard aligns well with them:\n",
+        "✅ 1. Show the Data\n",
+        "\n",
+        "    \"Above all else, show the data.\"\n",
+        "    Clean graphs highlight the key trends—price history, forecasts, and sentiment—without distractions.\n",
+        "\n",
+        "✅ 2. Maximize Data-Ink Ratio\n",
+        "\n",
+        "    \"Use ink only to show data.\"\n",
+        "    Minimal design, no unnecessary labels or visuals—just data-focused charts.\n",
+        "\n",
+        "✅ 3. Avoid Chartjunk\n",
+        "\n",
+        "    \"Remove non-data ink.\"\n",
+        "    No 3D effects, animations, or flashy elements. Just clear, color-coded visuals.\n",
+        "\n",
+        "✅ 4. Use Small Multiples\n",
+        "\n",
+        "    \"Small multiples are powerful.\"\n",
+        "    Different views (Historical, Sentiment, Forecasting) separate insights while allowing easy comparison.\n",
+        "\n",
+        "✅ 5. Integrate Words, Numbers, and Graphics\n",
+        "\n",
+        "    \"Keep everything together.\"\n",
+        "    Titles, labels, and graphs work together to tell the story clearly.\n",
+        "\n",
+        "✅ 6. Document the Data\n",
+        "\n",
+        "    \"Provide sources and context.\"\n",
+        "    While the data is synthetic here, real dashboards should include sources and definitions."
+      ],
+      "metadata": {
+        "id": "LaR0GyPge457"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusion\n",
+        "\n",
+        "This dashboard is a coherent, modular, and visually intuitive tool for analyzing stock trends. It follows Tufte's design principles effectively by:\n",
+        "\n",
+        "    Prioritizing clean and focused visuals\n",
+        "\n",
+        "    Separating views by analytical need (historical, sentiment, forecasting)\n",
+        "\n",
+        "    Enabling comparative analysis between companies and timeframes\n",
+        "\n",
+        "    Avoiding visual noise and over-design\n",
+        "\n",
+        "In future iterations, we can enhance this by including:\n",
+        "\n",
+        "    Tooltips for interactive insights\n",
+        "\n",
+        "    Downloadable reports\n",
+        "\n",
+        "    Real-time data sources and model accuracy metrics"
+      ],
+      "metadata": {
+        "id": "q8Z1H1cIfasB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "unnYs6czfhdI"
+      }
     }
   ]
 }
