--- a/2023184_student_cct_ie.ipynb
+++ b/2023184_student_cct_ie.ipynb
@@ -6188,32 +6188,32 @@
         "Tufts Principles and Dashboard Design\n",
         "\n",
         "Edward Tufte’s principles focus on simplicity, accuracy, and clear communication. This dashboard aligns well with them:\n",
-        "✅ 1. Show the Data\n",
+        "1. Show the Data\n",
         "\n",
         "    \"Above all else, show the data.\"\n",
         "    Clean graphs highlight the key trends—price history, forecasts, and sentiment—without distractions.\n",
         "\n",
-        "✅ 2. Maximize Data-Ink Ratio\n",
+        "2. Maximize Data-Ink Ratio\n",
         "\n",
         "    \"Use ink only to show data.\"\n",
         "    Minimal design, no unnecessary labels or visuals—just data-focused charts.\n",
         "\n",
-        "✅ 3. Avoid Chartjunk\n",
+        "3. Avoid Chartjunk\n",
         "\n",
         "    \"Remove non-data ink.\"\n",
         "    No 3D effects, animations, or flashy elements. Just clear, color-coded visuals.\n",
         "\n",
-        "✅ 4. Use Small Multiples\n",
+        "4. Use Small Multiples\n",
         "\n",
         "    \"Small multiples are powerful.\"\n",
         "    Different views (Historical, Sentiment, Forecasting) separate insights while allowing easy comparison.\n",
         "\n",
-        "✅ 5. Integrate Words, Numbers, and Graphics\n",
+        "5. Integrate Words, Numbers, and Graphics\n",
         "\n",
         "    \"Keep everything together.\"\n",
         "    Titles, labels, and graphs work together to tell the story clearly.\n",
         "\n",
-        "✅ 6. Document the Data\n",
+        "6. Document the Data\n",
         "\n",
         "    \"Provide sources and context.\"\n",
         "    While the data is synthetic here, real dashboards should include sources and definitions."
